[build-system]
requires = ["cmake", "csp", "scikit-build"]
build-backend="setuptools.build_meta"

[project]
name = "csp-example-piglatin"
authors = [{name = "the csp authors", email = "t.paine154@gmail.com"}]
description="CSP stream processing library"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = ["csp"]
