[build-system]
requires = [
    "cmake",
    "csp",
    "pybind11[global]",
    "scikit-build",
]
build-backend="setuptools.build_meta"

[project]
name = "csp-exampl-piglatin"
authors = [{name = "the csp authors", email = "t.paine154@gmail.com"}]
description="CSP stream processing library"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.8"

dependencies = ["csp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
