[package]
name = "exampleadapter"
version = "0.1.0"
edition = "2021"
description = "Example Rust adapter for CSP using the C API"
license = "Apache-2.0"
authors = ["CSP Contributors"]

[lib]
name = "exampleadapter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
libc = "0.2"

[build-dependencies]
# For generating Rust bindings from C headers
# bindgen = "0.69"

[features]
default = []
