[build-system]
requires = ["hatchling", "hatch-rs", "csp"]
build-backend = "hatchling.build"

[project]
name = "csp-example-c-api-rust-adapter"
authors = [{name = "the csp authors", email = "CSPOpenSource@point72.com"}]
description = "csp example of Rust adapter using C API and PyO3"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["csp"]

[tool.hatch.build.targets.wheel]
packages = ["exampleadapter"]

[tool.hatch.build.hooks.hatch-rs]
module = "exampleadapter"
