[build-system]
requires = ["cmake", "csp", "scikit-build"]
build-backend="setuptools.build_meta"

[project]
name = "csp-example-piglatin"
authors = [{name = "the csp authors", email = "CSPOpenSource@point72.com"}]
description="csp example of C++ node"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = ["csp"]
